# WWI20B2 REST-Backend (Stand 05.04.2022)/Backend/src/controller/speise.controller.js
@@ -1,18 +1,18 @@
 import {wrapHandler} from "../utils.js";
 import RestifyError from "restify-errors";
-import AddressService from "../service/address.service.js";
+import SpeiseService from "../service/speise.service.js";
 
 /**
  * HTTP-Handler-Klasse für alle Webservice-Aufrufe rund um die Entität
  * "Address".
  */
-export default class AddressController {
+export default class SpeiseController {
     /**
      * Konstruktor. Hier werden die Handler-Methoden registriert.
      */
     constructor(server, prefix) {
         this._prefix = prefix;
-        this._service = new AddressService();
+        this._service = new SpeiseService();
 
         // Collection: Address (Liste von Adressen)
         server.get(prefix, wrapHandler(this, this.search));
